--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "angular1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gulp",
     "production": "gulp --production"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies":{
+  "devDependencies": {
     "admin-lte": "2.3.11",
     "angular": "1.6.6",
     "angular-animate": "1.6.6",
