--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^4.13.21",
     "mongoose-paginate": "^5.0.3",
     "node-restful": "^0.2.6",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "bcrypt":"^1.0.2",
+    "jsonwebtoken":"^7.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
